<resources>
    <string name="app_name">NewKommunalka02</string>

    <string name="count">Счетчики</string>
    <string name="other_count">Прочее</string>
    <string name="archive">Архив</string>
    <string name="graphics">Графики</string>
    <string name="remember">Напоминания</string>
    <string name="pay">Оплата</string>

    <string name="system">Системные настройки</string>
    <string name="system_language">Выбрать язык</string>
    <string name="system_language1">Выберете системный язык</string>
    <string name="system_theme">Выбрать тему</string>
    <string name="system_country">Выбрать регион</string>
    <string name="system_country1">Выберете ваш регион</string>
    <string name="system_upgrade">Проверить обновление тарифоф</string>
    <string name="system_categories">Категория потребителей</string>
    <string name="system_help">Помощь</string>
    <string name="oblast">Выберете область</string>
    <string name="load">Загрузить</string>
    <string name="on">Добавить</string>
    <string name="off">Отмена</string>
    <string name="add_count">Добавить счетчик</string>
    <string name="add">Добавить</string>


    <string name="action_settings">Настройки</string>
    <string name="action_settings1">Настройки списка</string>
    <string name="action_upgrade">Ваши тарифы</string>
    <string name="save">Сохранить</string>
    <string name="back">Вернуться</string>

    <string name="name">Введите название счетчика</string>
    <string name="electro">Электроэнергия</string>
    <string name="electro_tarif">Тарифы на электроэнергию</string>
    <string name="cWater">Холодная вода</string>
    <string name="cWater_tarif">Тарифы на холодную воду</string>
    <string name="cWater_tarifMy">Тарифы на холодную воду (грн/м.куб.)</string>
    <string name="cWater_tarif1">На холодную воду</string>
    <string name="cWater_tarif_all">На водоотведение</string>
    <string name="hWater">Горячая вода</string>
    <string name="tarif_hWater">Тариф на горячую воду</string>
    <string name="gas">Газ</string>
    <string name="tarif_gas">Тариф на газ</string>
    <string name="gas_no">Газ без счетчика</string>
    <string name="heating">Отопление</string>
    <string name="gek">ЖЭК</string>
    <string name="phone">Телефон</string>
    <string name="garbage">Вывоз мусора</string>
    <string name="tv">Телевидение</string>
    <string name="internet">Интернет</string>
    <string name="domophon">Домофон</string>
    <string name="cleaning">Уборка</string>
    <string name="other">Прочее</string>
    <string name="clear">Очистить</string>

    <string name="porog">Первый порог (кВт)</string>
    <string name="porog_gas">Первый порог (м.куб.)</string>
    <string name="porog1">Второй порог (кВт)</string>
    <string name="porog_gas1">Второй порог (м.куб)</string>
    <string name="porog2">Третий порог (кВт)</string>
    <string name="tarif_porog">Осовной тариф (грн)</string>
    <string name="tarif_porog1">Тариф после первого порога (грн)</string>
    <string name="tarif_porog2">Тариф после второго порога (грн)</string>
    <string name="for_pay">Введите сумму для оплаты (грн)</string>

    <string name="choose_count">Выбирете счетчик</string>
    <string name="load_tarif">Сохраненные тарифы</string>
    <string name="save_tarif">Готовые тарифы</string>
    <string name="input_tarif">Ввести тарифы самостоятельно</string>
    <string name="note">Добавить комментарий</string>
    <string name="count_start">Введите показания счетчика</string>
    <string name="water_pay">грн/м(куб.)</string>
    <string name="comuna">Коммунальное предприятие</string>
    <string name="count1">Показания:</string>
    <string name="count2">Конечные \nпоказания</string>
    <string name="valute"> грн</string>
    <string name="penny">коп.</string>
    <string name="hint_red">без красных цифр</string>
    <string name="oo">00</string>
    <string name="city">В городе</string>
    <string name="village">В сельской местности</string>
    <string name="emty_house">Дом без газа и отопления</string>
    <string name="payment">К оплате: </string>
    <string name="clean">Очистить</string>
    <string name="calc">Посчитать</string>
    <string name="to">На:</string>
    <string name="count_calc">По счетчику</string>
    <string name="count_fix">Фиксированый тариф</string>
    <string name="input_tipe">Выберите способ ввода</string>
    <string name="tarif">Изменить тариф</string>
    <string name="count_input">Ввести тариф самстоятельно</string>
    <string name="count_input1">Ввести тариф</string>
    <string name="tarif_input1">Введите тариф</string>
    <string name="tarif_input2">Введите тариф после первого порога</string>
    <string name="tarif_input3">Введите тариф после второго порога</string>
    <string name="add_step">Добавить порог</string>
    <string name="step">Введите первый порог</string>
    <string name="step1">Введите второй порог</string>
    <string name="step2">Введите третий порог</string>
    <string name="archive_button">Архив платежей</string>
    <string name="m3">м. куб.</string>
    <string name="kwt">кВт</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="to_time"><u>Сейчас</u></string>
    <string name="to_time_test">Сейчас</string>
    <string name="to_day"><u>Сегодня</u></string>
    <string name="to_day_test">Сегодня</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
