<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_my_el"
        android:title="@string/electro_tarif">


        <EditTextPreference
            android:enabled="true"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:key="key_tarif_electro_my"
            android:title="@string/tarif_porog" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_my_tarif_el1"
        android:title="@string/porog">

        <EditTextPreference
            android:dependency="key_tarif_electro_my"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:key="key_porog_electro_my1"
            android:title="@string/porog" />

        <EditTextPreference
            android:dependency="key_porog_electro_my1"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:key="key_tarif_electro_my1"
            android:title="@string/tarif_porog1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_tarif_el2"
        android:title="@string/porog1">

        <EditTextPreference
            android:dependency="key_tarif_electro_my1"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:key="key_porog_electro_my2"
            android:title="@string/porog1" />

        <EditTextPreference
            android:dependency="key_porog_electro_my2"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:key="key_tarif_electro_my2"
            android:title="@string/tarif_porog2" />
    </PreferenceCategory>

</PreferenceScreen>