<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgraund"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:screenOrientation="portrait">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="6dp">


        <ImageView
            android:id="@+id/toolbar_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="3dp"
            android:transitionName="@string/app_name" />

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/toolbar_view"
            android:textSize="18sp"
            android:transitionName="@string/app_name" />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:background="@color/colorPrimaryLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:background="#0000"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/count_start"
                android:inputType="number"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_below="@+id/count"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:layout_margin="16dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/count_date"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_below="@+id/date"
                android:layout_marginLeft="16dp"
                android:clickable="true"
                android:text="@string/to_day"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/note"
                android:layout_alignTop="@+id/date"
                android:layout_toRightOf="@+id/date"
                android:layout_toEndOf="@+id/date"
                android:layout_marginLeft="126dp"
                android:layout_marginStart="126dp" />

            <ImageView
                android:id="@+id/count_note"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/note"
                android:layout_below="@+id/note"
                android:layout_alignLeft="@+id/note"
                android:layout_alignStart="@+id/note"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/tarif_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_marginBottom="36dp">
    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.CardView
        android:id="@+id/down_card"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        card_view:cardElevation="6dp">
        <RelativeLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/back"/>

            <TextView
                android:id="@+id/back_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:text="@string/back"
                android:textSize="19sp"
                android:layout_toRightOf="@+id/back_image" />

            <View
                android:id="@+id/down_divider"
                android:layout_width="1dp"
                android:layout_centerHorizontal="true"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />



            <ImageView
                android:id="@+id/save_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:background="@drawable/save"
                android:layout_toRightOf="@+id/down_divider"/>

            <TextView
                android:id="@+id/save_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/save"
                android:textSize="19sp"
                android:layout_toRightOf="@+id/save_image" />



        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>