<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgraund"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/crd_count"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/count"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:text="@string/count"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/main_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/count"
                    android:layout_marginBottom="16dp">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/crd_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/crd_count"
            android:layout_marginTop="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/other_count"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="1dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:text="@string/other_count"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/other_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/other_count"
                    android:layout_marginBottom="16dp">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crd_archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/crd_other"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/archive"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/archive"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/archive_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/archive"
            android:layout_marginBottom="16dp">
        </android.support.v7.widget.RecyclerView>

        </RelativeLayout>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crd_graphics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/crd_archive">
        <TextView
            android:id="@+id/graphics"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/archive_recycler"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/graphics"
            android:textSize="20sp" />

</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/crd_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/crd_graphics">
        <TextView
            android:id="@+id/remember"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/graphics"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/remember"
            android:textSize="20sp" />
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/crd_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:layout_below="@id/crd_remember">

        <TextView
            android:id="@+id/pay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/remember"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/pay"
            android:textSize="20sp" />
        </android.support.v7.widget.CardView>

    </RelativeLayout>

    </ScrollView>
</LinearLayout>